Trying to make game over buttons fix inside chocolate bar on mobile 5

--- a/src/styles.css
+++ b/src/styles.css
@@ -202,8 +202,8 @@ i.fa-skull-crossbones {
 }
 
 button {
-	width: calc(2 * min(80px, 15vmin) - 12px);
-	height: calc(min(80px, 15vmin) - 16px);
+	width: calc(2 * min(80px, 15vmin) - 11px);
+	height: calc(min(80px, 15vmin) - 11px);
 	/* margin-top: 10px;
 	margin-right: 20px; */
 	font-size: 1.25rem;
